fixed the visibility issue

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,6 @@ body {
   width: 140px;
 height: 50px;
 gap: 0px;
-opacity: 0px;
 
 }
 
@@ -40,7 +39,6 @@ opacity: 0px;
   height: 48px;
 
   gap: 0px;
-  opacity: 0px;
 
   div {
     /* width: 100%; */
@@ -52,7 +50,6 @@ opacity: 0px;
       padding: 10px 16px 10px 16px;
       /* gap: 10px; */
       border-radius: 8px 0px 0px 8px;
-      opacity: 0px;
       border: none !important;
 
     }
@@ -73,7 +70,6 @@ opacity: 0px;
   width: 357px;
   height: 24px;
   gap: 16px;
-  opacity: 0px;
   gap: 16px;
 
   span {
@@ -96,7 +92,6 @@ opacity: 0px;
 }
 .header-text {
   height: 177px;
-  z-index: 1;
   h1 {
     margin-bottom: 3vh;
     color: var(--white-color);
